--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,6 @@ textarea {
 body {
   color: #2e2e2e;
   background-color: #fff;
-  /*max-width: 68em; 1088*/
-  /*max-width: 100em;*/
   margin: 0 auto;
   text-align: center;
 }
@@ -115,11 +113,11 @@ ICON FONTS
 
 @font-face {
   font-family: 'ico-fonts';
-  src:url('/fonts/ico-fonts.eot?ghgy45');
-  src:url('/fonts/ico-fonts.eot?#iefixghgy45') format('embedded-opentype'),
-    url('fonts/ico-fonts.ttf?ghgy45') format('truetype'),
-    url('fonts/ico-fonts.woff?ghgy45') format('woff'),
-    url('fonts/ico-fonts.svg?ghgy45#ico-fonts') format('svg');
+  src:url('/css/fonts/ico-fonts.eot?ghgy45');
+  src:url('/css/fonts/ico-fonts.eot?#iefixghgy45') format('embedded-opentype'),
+    url('/css/fonts/ico-fonts.ttf?ghgy45') format('truetype'),
+    url('/css/fonts/ico-fonts.woff?ghgy45') format('woff'),
+    url('/css/fonts/ico-fonts.svg?ghgy45#ico-fonts') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -200,6 +198,16 @@ ICON FONTS
 SECTION HEADERS
 */
 
+.team-section-header,
+.client-section-header,
+.section-header,
+.sub-section-header,
+.portfolio-section-header,
+.contact-section-header {
+  width: 100%;
+  text-decoration: underline;
+}
+
 .section-header,
 .sub-section-header {
   max-width: 90%;
@@ -210,8 +218,8 @@ SECTION HEADERS
 
 @media screen and (min-width: 50em) {
   .white-line {
-    background: url(../img/horizontal-white-line.svg) no-repeat left,
-                url(../img/horizontal-white-line.svg) no-repeat right;
+    background: url("/img/horizontal-white-line.svg") no-repeat left,
+                url("/img/horizontal-white-line.svg") no-repeat right;
   }
 
   .section-header {
@@ -226,28 +234,8 @@ SECTION HEADERS
     background-size: 28%;
   }
 
-  .section-arrows-white:before {
-    position: absolute;
-    content: "";
-    display: block;
-    width: 20%;
-    height: 43px;
-    top: 0;
-    left: 40%;
-    background: url(../img/triangle-white.svg) no-repeat;
-  }
-
-  .section-arrows-orange:before {
-    position: absolute;
-    content: "";
-    display: block;
-    width: 20%;
-    height: 43px;
-    top: 0;
-    left: 40%;
-    background: url(../img/triangle-orange.svg) no-repeat;
-  }
-
+  .section-arrows-white:before,
+  .section-arrows-orange:before,
   .section-arrows-black:before {
     position: absolute;
     content: "";
@@ -256,7 +244,18 @@ SECTION HEADERS
     height: 43px;
     top: 0;
     left: 40%;
-    background: url(../img/triangle-black.svg) no-repeat;
+  }
+
+  .section-arrows-orange:before {
+    background: url("/img/triangle-orange.svg") no-repeat;
+  }
+
+  .section-arrows-black:before {
+    background: url("/img/triangle-black.svg") no-repeat;
+  }
+
+  .section-arrows-white:before {
+    background: url("/img/triangle-white.svg") no-repeat;
   }
 }
 
@@ -300,7 +299,7 @@ HEADER & LOGO
 .header-content {
   padding: 3em 0;
   background-size: cover;
-  background-image: url("../img/header-background.jpg");
+  background-image: url(/img/header-background.jpg);
 }
 
 .logo {
@@ -320,7 +319,7 @@ HEADER & LOGO
 .curve-underline {
   padding-bottom: .1em;
   background-size: cover;
-  background: url("../img/orange-underline.svg") no-repeat;
+  background: url("/img/orange-underline.svg") no-repeat;
   background-position: bottom;
 }
 
@@ -345,7 +344,6 @@ SERVICES COMPONENTS
 .contact-text {
   display: inline-block;
   padding: .5em 0;
-  /*font-size: 1.333em;*/
   line-height: 1.4;
 }
 
@@ -400,7 +398,6 @@ SERVICES COMPONENTS
   .services-text,
   .contact-text {
     padding: 1em;
-    /*font-size: 1em;*/
   }
 
   .services-category {
@@ -415,7 +412,6 @@ PRICING COMPONENTS
 */
 
 [class^="pricing"] {
-  /*font-size: 1em;*/
   text-align: center;
 }
 
@@ -646,11 +642,6 @@ PORTFOLIO SLIDER
 PORTFOLIO NAVIGATION
 */
 
-/*.portfolio-section-header a {
-  text-decoration: none;
-  padding: .3em;
-}*/
-
 [title="portfolio-categories"] li {
   display: block;
   margin-top: .9em;
@@ -658,7 +649,6 @@ PORTFOLIO NAVIGATION
   text-align: center;
 }
 
-/*.portfolio-section-header,*/
 .portfolio-menu-item {
   padding: .3em;
   font-size: 1.333rem;
@@ -852,8 +842,6 @@ TEAM
 
 .team, .clients {
   display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
   -webkit-flex-wrap: wrap;
@@ -865,16 +853,6 @@ TEAM
   -webkit-justify-content: space-around;
   justify-content: space-around;
   padding-top: 2.5em;
-}
-
-.team-section-header,
-.client-section-header,
-.section-header,
-.sub-section-header,
-.portfolio-section-header,
-.contact-section-header {
-  width: 100%;
-  text-decoration: underline;
 }
 
 .team-section-header {
@@ -950,14 +928,10 @@ TEAM
 
 .clients {
   -webkit-box-pack: justify;
-  -moz-box-pack: justify;
   -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
   justify-content: space-between;
   -webkit-box-align: center;
-  -moz-box-align: center;
   -webkit-align-items: center;
-  -ms-flex-align: center;
   align-items: center;
   min-width: 20em;
   margin-top: 1em;
@@ -997,8 +971,8 @@ TEAM
 
 @media screen and (min-width: 50em) {
   .gray-line {
-    background: url(../img/horizontal-black-line.svg) no-repeat left,
-                url(../img/horizontal-black-line.svg) no-repeat right;
+    background: url("/img/horizontal-black-line.svg") no-repeat left,
+                url("/img/horizontal-black-line.svg") no-repeat right;
   }
 
   .team-section-header {
@@ -1022,14 +996,10 @@ TEAM
 
   .client-figure {
     display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
     -webkit-box-align: center;
-    -moz-box-align: center;
     -webkit-align-items: center;
-    -ms-flex-align: center;
     align-items: center;
     margin: 1em 0;
   }
@@ -1173,7 +1143,7 @@ input[type="submit"]  {
     height: 43px;
     top: 0;
     left: 40%;
-    background: url(../img/triangle-white.svg) no-repeat;
+    background: url("/img/triangle-white.svg") no-repeat;
   }
 
   input, textarea, .contact-map-caption {
