--- a/css/style-copy-9-15.css
+++ b/css/style-copy-9-15.css
@@ -1,15 +1,3 @@
-$white: #ffffff !default;
-$orange: #fd6632 !default;
-$burntorange: #be4c25 !default;
-$firebrick: #7e3319 !default;
-$darkgrey: #2e2e2e !default;
-$grey: #7c8387 !default;
-$lightgrey: #d4d4d4 !default;
-$slategrey: #b9bdbf !default;
-
-$font-color: $darkgrey;
-
-
 /*
 BASE STYLES
 */
@@ -31,7 +19,7 @@ textarea {
 }
 
 body {
-  color: $darkgrey;
+  color: #2e2e2e;
   background-color: #fff;
   margin: 0 auto;
   text-align: center;
@@ -44,6 +32,9 @@ input {
   color: #fff;
 }
 
+h1 {
+  font-size: 2em;
+}
 
 h2 {
   font-size: 2.369em;
@@ -205,83 +196,41 @@ ICON FONTS
 SECTION HEADERS
 */
 
-@mixin section-header($font-color) {
-  display: inline-block;
-  margin: 0 .3em;
-  font-size: 2.2em;
-  color: $font-color;
-  text-transform: uppercase;
-}
-
-.services-header {
-  @include section-header($white);
-}
-
-.portfolio-header {
-  @include section-header($darkgrey);
-}
-
-.about-header {
-  @include section-header($white);
-}
-
-.team-header {
-  @include section-header($darkgrey);
-}
-
-.contact-header {
-  @include section-header($white);
-}
-
-.section-header-container {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: justify;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  align-items: center;
+.team-section-header,
+.client-section-header,
+.section-header,
+.sub-section-header,
+.portfolio-section-header,
+.contact-section-header {
   width: 100%;
+  text-decoration: underline;
 }
 
-
-// .team-section-header,
-// .client-section-header,
-// .section-header,
-// .sub-section-header,
-// .portfolio-section-header,
-// .contact-section-header {
-//   width: 100%;
-//   text-decoration: underline;
-// }
-
-// .section-header,
-// .sub-section-header {
-//   max-width: 90%;
-//   margin: 0 auto;
-//   padding: .75em 0;
-//   text-align: center;
-// }
+.section-header,
+.sub-section-header {
+  max-width: 90%;
+  margin: 0 auto;
+  padding: .75em 0;
+  text-align: center;
+}
 
 @media screen and (min-width: 50em) {
-  // .white-line {
-  //   background: url("/img/horizontal-white-line.svg") no-repeat left,
-  //               url("/img/horizontal-white-line.svg") no-repeat right;
-  // }
+  .white-line {
+    background: url("/img/horizontal-white-line.svg") no-repeat left,
+                url("/img/horizontal-white-line.svg") no-repeat right;
+  }
 
-  // .section-header {
-  //   background-size: 35%;
-  // }
+  .section-header {
+    background-size: 35%;
+  }
 
-  // .sub-section-header {
-  //   -webkit-flex-basis: 100%;
-  //   flex-basis: 100%;
-  //   margin: 0 6em;
-  //   padding: 1.333em 2em;
-  //   background-size: 28%;
-  // }
+  .sub-section-header {
+    -webkit-flex-basis: 100%;
+    flex-basis: 100%;
+    margin: 0 6em;
+    padding: 1.333em 2em;
+    background-size: 28%;
+  }
 
   .section-arrows-white:before,
   .section-arrows-orange:before,
@@ -381,9 +330,9 @@ HEADER & LOGO
 }
 
 @media screen and (min-width: 50em) {
-  // h1 {
-  //   font-size: 2.666em;
-  // }
+  h1 {
+    font-size: 2.666em;
+  }
 }
 
 
@@ -409,11 +358,11 @@ SERVICES COMPONENTS
   padding: 1.333em;
 }
 
-// .services-header {
-//   min-width: 225px;
-//   padding: .5em 0;
-//   font-size: 2.369em
-// }
+.services-header {
+  min-width: 225px;
+  padding: .5em 0;
+  font-size: 2.369em
+}
 
 [data-title="ux-design"]:after {
   content: "\e60b";
@@ -437,7 +386,7 @@ SERVICES COMPONENTS
   font-family: 'ico-fonts';
   font-size: 2em;
   text-align: center;
-  color: $darkgrey;
+  color: #2e2e2e;
   background-color: #fff;
   border-radius: 50%;
 }
@@ -504,7 +453,7 @@ li[class^="pricing"] {
 }
 
 .pricing-stats {
-  color: $darkgrey;
+  color: #2e2e2e;
 }
 
 .pricing-button-container {
@@ -565,20 +514,20 @@ PORTFOLIO SECTION
   margin: 0 auto;
 }
 
-// .portfolio-section-header {
-//   width: 100%;
-//   text-align: center;
-//   margin-top: .2em;
-//   margin-bottom: .5em;
-// }
+.portfolio-section-header {
+  width: 100%;
+  text-align: center;
+  margin-top: .2em;
+  margin-bottom: .5em;
+}
 
 @media screen and (min-width: 50em) {
 
-  // .portfolio-section-header {
-  //   margin: 0 6%;
-  //   padding: 1em 0;
-  //   background-size: calc(100% - 11.5em);
-  // }
+  .portfolio-section-header {
+    margin: 0 6%;
+    padding: 1em 0;
+    background-size: calc(100% - 11.5em);
+  }
 
   .portfolio-container {
     position: relative;
@@ -626,7 +575,7 @@ PORTFOLIO SLIDER
   width: 14em;
   line-height: 1.1;
   text-align: left;
-  text-shadow: 1px 1px 5px $darkgrey;
+  text-shadow: 1px 1px 5px #2e2e2e;
 }
 
 .portfolio-slider-caption p {
@@ -805,15 +754,15 @@ ABOUT
   padding: 4em 1em 1em;
 }
 
-// .about-header, .skills-header {
-//   color: #fff;
-//   text-decoration: underline;
-// }
+.about-header, .skills-header {
+  color: #fff;
+  text-decoration: underline;
+}
 
-// .about-header {
-//   font-size: 2.4em;
-//   margin-bottom: 0.5em;
-// }
+.about-header {
+  font-size: 2.4em;
+  margin-bottom: 0.5em;
+}
 
 .about p {
   display: inline-block;
@@ -859,14 +808,14 @@ progress[value]::-webkit-progress-value {
 }
 
 @media screen and (min-width: 50em) {
-  // .about-header, .skills-header {
-  //   text-decoration: none;
-  // }
+  .about-header, .skills-header {
+    text-decoration: none;
+  }
 
-  // .about-header {
-  //   margin: 0 12% 1em;
-  //   background-size: calc(50% - 2em);
-  // }
+  .about-header {
+    margin: 0 12% 1em;
+    background-size: calc(50% - 2em);
+  }
 
   .about p {
     width: 49.5%;
@@ -916,9 +865,9 @@ TEAM
   padding-top: 2.5em;
 }
 
-// .team-section-header {
-//   padding: 0.7em 0;
-// }
+.team-section-header {
+  padding: 0.7em 0;
+}
 
 .team-profile, .social-icons {
   display: inline-block;
@@ -929,10 +878,10 @@ TEAM
   margin: 1em 0;
 }
 
-// .team-header {
-//   line-height: 1.5em;
-//   font-weight: bold;
-// }
+.team-header {
+  line-height: 1.5em;
+  font-weight: bold;
+}
 
 .team-text {
   color: #7c8387;
@@ -948,7 +897,7 @@ TEAM
 }
 
 .profile-header {
-  color: $darkgrey;
+  color: #2e2e2e;
   font-size: 1.5em;
 }
 
@@ -1009,7 +958,7 @@ TEAM
 }
 
 .client-header {
-  color: $darkgrey;
+  color: #2e2e2e;
   margin: 0.7em 0;
 }
 
@@ -1031,15 +980,15 @@ TEAM
 }
 
 @media screen and (min-width: 50em) {
-  // .gray-line {
-  //   background: url("/img/horizontal-black-line.svg") no-repeat left,
-  //               url("/img/horizontal-black-line.svg") no-repeat right;
-  // }
+  .gray-line {
+    background: url("/img/horizontal-black-line.svg") no-repeat left,
+                url("/img/horizontal-black-line.svg") no-repeat right;
+  }
 
-  // .team-section-header {
-  //   margin: 0 3%;
-  //   background-size: calc(50% - 0.6em);
-  // }
+  .team-section-header {
+    margin: 0 3%;
+    background-size: calc(50% - 0.6em);
+  }
 
   .team-description-text {
     margin-bottom: 3em;
@@ -1049,11 +998,11 @@ TEAM
     font-size: 1em;
   }
 
-  // .client-section-header {
-  //   margin: 0 19.25%;
-  //   padding: 1.333em 0;
-  //   background-size: calc(50% - 2.5em);
-  // }
+  .client-section-header {
+    margin: 0 19.25%;
+    padding: 1.333em 0;
+    background-size: calc(50% - 2.5em);
+  }
 
   .client-figure {
     display: -webkit-box;
@@ -1099,9 +1048,9 @@ CONTACT SECTION
   background-color: #fd6632;
 }
 
-// .contact-section-header {
-//   background-size: calc(100% - 13.5em);
-// }
+.contact-section-header {
+  background-size: calc(100% - 13.5em);
+}
 
 .contact-text {
   margin-bottom: 1.5em;
@@ -1213,10 +1162,10 @@ input[type="submit"]  {
     padding-top: 2em;
   }
 
-  // .contact-section-header {
-  //   -webkit-flex-basis: 94%;
-  //   flex-basis: 94%;
-  // }
+  .contact-section-header {
+    -webkit-flex-basis: 94%;
+    flex-basis: 94%;
+  }
 
   input[type="submit"] {
     margin-left: calc(100% - 155px);
@@ -1279,7 +1228,6 @@ MEDIA SCREEN MODIFIERS
 
 @media screen and (min-width: 50em) {
   .services-container,
-  .portfolio-container,
   .team,
   .about,
   .header-content,
@@ -1291,14 +1239,14 @@ MEDIA SCREEN MODIFIERS
     width: 45%;
   }
 
-  // .team-section-header,
-  // .client-section-header,
-  // .section-header,
-  // .sub-section-header,
-  // .pricing-header,
-  // .portfolio-section-header,
-  // .contact-section-header {
-  //   text-decoration: none;
-  //   text-transform: uppercase;
-  // }
+  .team-section-header,
+  .client-section-header,
+  .section-header,
+  .sub-section-header,
+  .pricing-header,
+  .portfolio-section-header,
+  .contact-section-header {
+    text-decoration: none;
+    text-transform: uppercase;
+  }
 }
