--- a/css/main.css
+++ b/css/main.css
@@ -161,40 +161,26 @@ ICON FONTS
 /*
 SECTION HEADERS
 */
-.services-header {
+.services-header, .portfolio-header, .about-header, .team-header, .contact-header {
   display: inline-block;
   margin: 0 0.3em;
   font-size: 2.2em;
-  color: #ffffff;
   text-transform: uppercase; }
+
+.services-header {
+  color: #ffffff; }
 
 .portfolio-header {
-  display: inline-block;
-  margin: 0 0.3em;
-  font-size: 2.2em;
-  color: #2e2e2e;
-  text-transform: uppercase; }
+  color: #2e2e2e; }
 
 .about-header {
-  display: inline-block;
-  margin: 0 0.3em;
-  font-size: 2.2em;
-  color: #ffffff;
-  text-transform: uppercase; }
+  color: #ffffff; }
 
 .team-header {
-  display: inline-block;
-  margin: 0 0.3em;
-  font-size: 2.2em;
-  color: #2e2e2e;
-  text-transform: uppercase; }
+  color: #2e2e2e; }
 
 .contact-header {
-  display: inline-block;
-  margin: 0 0.3em;
-  font-size: 2.2em;
-  color: #ffffff;
-  text-transform: uppercase; }
+  color: #ffffff; }
 
 .section-header-container {
   display: -webkit-box;
