--- a/sass/main.scss
+++ b/sass/main.scss
@@ -205,32 +205,36 @@ ICON FONTS
 SECTION HEADERS
 */
 
-@mixin section-header($font-color) {
+%section-header {
   display: inline-block;
   margin: 0 .3em;
   font-size: 2.2em;
-  color: $font-color;
   text-transform: uppercase;
 }
 
 .services-header {
-  @include section-header($white);
+  @extend %section-header;
+  color: $white;
 }
 
 .portfolio-header {
-  @include section-header($darkgrey);
+  @extend %section-header;
+  color: $darkgrey;
 }
 
 .about-header {
-  @include section-header($white);
+  @extend %section-header;
+  color: $white;
 }
 
 .team-header {
-  @include section-header($darkgrey);
+  @extend %section-header;
+  color: $darkgrey;
 }
 
 .contact-header {
-  @include section-header($white);
+  @extend %section-header;
+  color: $white;
 }
 
 .section-header-container {
