--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,4 @@
 @charset "UTF-8";
-/*
-BASE STYLES
-*/
 html {
   box-sizing: border-box; }
 
@@ -12,38 +9,35 @@ body,
 button,
 input,
 textarea {
-  font-family: "helvetica neue", arial, sans-serif;
-  font-size: 16px; }
+  font-family: "Helvetica Neue", Arial, sans-serif;
+  font-size: 1em;
+  color: #ffffff; }
+
+h1 {
+  font-size: 2.125em; }
+
+h2 {
+  font-size: 1.375em; }
+
+h3 {
+  font-size: 1.25em; }
+
+input,
+textarea {
+  font-weight: bold; }
+
+a {
+  color: #7c8387;
+  text-decoration: none; }
 
 body {
-  color: #2e2e2e;
   background-color: #fff;
   margin: 0 auto;
   text-align: center; }
 
-p,
-button,
-textarea,
-input {
-  color: #fff; }
-
-h2 {
-  font-size: 2.369em;
-  font-weight: bold; }
-
-h3 {
-  font-size: 1.777em;
-  font-weight: bold; }
-
-h4 {
-  font-size: 0.9em; }
-
 button {
   background-color: #fd6632;
   border: none; }
-
-a {
-  text-decoration: none; }
 
 button:active, a:active {
   opacity: 0.8; }
@@ -60,7 +54,6 @@ img {
 input,
 textarea {
   display: block;
-  font-weight: bold;
   background-color: #be4c25;
   border: none; }
 
