Add header presentation and wrap social icons in an unordered list

--- a/css/style.css
+++ b/css/style.css
@@ -198,14 +198,24 @@ ICON FONTS
 SECTION HEADERS
 */
 
-.team-section-header,
+/*.team-section-header,
 .client-section-header,
 .section-header,
 .sub-section-header,
 .portfolio-section-header,
-.contact-section-header {
+.contact-section-header {*/
+.header-container {
   width: 100%;
-  text-decoration: underline;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  margin-bottom: 0.5em;
 }
 
 .section-header,
@@ -272,12 +282,15 @@ MENU
   z-index: 1000;
 }
 
-.menu a {
+.menu li {
   display: inline-block;
   width: 30%;
+  padding-top: 0.5em;
+}
+
+.menu a {
   color: #7c8387;
   font-weight: bold;
-  padding-top: 0.5em;
 }
 
 @media screen and (min-width: 50em) {
@@ -286,7 +299,7 @@ MENU
     padding: 0.8em calc(20% - 3em);
   }
 
-  .menu a {
+  .menu li {
     padding-top: 0.1em;
     width: 16%;
   }
@@ -746,13 +759,15 @@ ABOUT
 }
 
 .about-header, .skills-header {
+  display: inline-block;
   color: #fff;
-  text-decoration: underline;
+  /*text-decoration: underline;*/
 }
 
 .about-header {
   font-size: 2.4em;
-  margin-bottom: 0.5em;
+  margin: 0 0.4em;
+  /*margin-bottom: 0.5em;*/
 }
 
 .about p {
@@ -763,7 +778,8 @@ ABOUT
 
 .skills-header {
   font-size: 1.7em;
-  margin-bottom: 0.8em;
+  margin: 0 0.7em;
+  /*margin-bottom: 0.8em;*/
 }
 
 .skills li {
@@ -799,14 +815,14 @@ progress[value]::-webkit-progress-value {
 }
 
 @media screen and (min-width: 50em) {
-  .about-header, .skills-header {
+/*  .about-header, .skills-header {
     text-decoration: none;
   }
 
   .about-header {
     margin: 0 12% 1em;
     background-size: calc(50% - 2em);
-  }
+  }*/
 
   .about p {
     width: 49.5%;
@@ -818,10 +834,10 @@ progress[value]::-webkit-progress-value {
     margin-bottom: 6em;
   }
 
-  .skills-header {
+/*  .skills-header {
     margin: 0 19.25% 1.5em;
     background-size: calc(50% - 2.25em);
-  }
+  }*/
 
   .skills li {
     margin-bottom: 1.4em;
@@ -901,9 +917,17 @@ TEAM
 }
 
 .social-icons {
+  margin: 1.5em 0;
+}
+
+.social-icons li {
+  display: inline-block;
+  margin: 0 0.1em;
+}
+
+.social-icons a {
   font-size: 1.3em;
   padding: 0.3em;
-  margin: 1em 0.1em;
 }
 
 .icon-facebook {
@@ -984,7 +1008,7 @@ TEAM
     margin-bottom: 3em;
   }
 
-  .social-icons {
+  .social-icons a {
     font-size: 1em;
   }
 
@@ -1236,13 +1260,15 @@ MEDIA SCREEN MODIFIERS
     width: 45%;
   }
 
-  .team-section-header,
+/*  .team-section-header,
   .client-section-header,
   .section-header,
   .sub-section-header,
   .pricing-header,
   .portfolio-section-header,
-  .contact-section-header {
-    text-decoration: none;
+  .contact-section-header {*/
+
+  .header-container {
+    /*text-decoration: none;*/
   }
 }
