--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -8,17 +8,17 @@ textarea {
   color: $primary_font_color;
 }
 
-h1 {
-  font-size: em($heading_1);
-}
+// h1 {
+//   font-size: em($heading_1);
+// }
 
-h2 {
-  font-size: em($heading_2);
-}
+// h2 {
+//   font-size: em($heading_2);
+// }
 
-h3 {
-  font-size: em($heading_3);
-}
+// h3 {
+//   font-size: em($heading_3);
+// }
 
 input,
 textarea {
