--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,13 @@ body {
   text-align: center;
 }
 
+header, article {
+  padding: 2em 1em;
+  @media screen and (min-width: 50em) {
+    padding: 0 calc(20% - 7.5em) 6em;
+  }
+}
+
 button {
   background-color: #fd6632;
   border: none;
@@ -53,9 +60,9 @@ progress[value] {
 MODIFIERS
 */
 
-.white-color {
-  color: #fff;
-}
+// .white-color {
+//   color: #fff;
+// }
 
 .circle {
   border-radius: 100%;
@@ -152,39 +159,50 @@ ICON FONTS
 SECTION HEADERS
 */
 
-%section-header {
+%primary-header {
   display: inline-block;
-  margin: 1em .3em;
-  font-size: 2.2em;
+  margin: 1.1em 0.3em;
+  font-size: em($heading_1);
+  font-weight: bold;
   text-transform: uppercase;
 }
 
-.services-header {
-  @extend %section-header;
+.primary-header-light {
+  @extend %primary-header;
   color: $canvas;
 }
 
-.portfolio-header {
-  @extend %section-header;
+.primary-header-dark {
+  @extend %primary-header;
   color: $secondary_accent;
 }
 
-.about-header {
-  @extend %section-header;
-  color: $canvas;
-}
+// .services-header {
+//   @extend %section-header;
+//   color: $canvas;
+// }
 
-.team-header {
-  @extend %section-header;
-  color: $secondary_accent;
-}
+// .portfolio-header {
+//   @extend %section-header;
+//   color: $secondary_accent;
+// }
 
-.contact-header {
-  @extend %section-header;
-  color: $canvas;
-}
+// .about-header {
+//   @extend %section-header;
+//   color: $canvas;
+// }
 
-.section-header-container {
+// .team-header {
+//   @extend %section-header;
+//   color: $secondary_accent;
+// }
+
+// .contact-header {
+//   @extend %section-header;
+//   color: $canvas;
+// }
+
+.header-container {
   display: -webkit-box;
   display: -webkit-flex;
   display: flex;
@@ -300,7 +318,7 @@ HEADER & LOGO
 */
 
 .header-content {
-  padding: 3em 0;
+  // padding: 3em 0;
   background-size: cover;
   background-image: url(/img/header-background.jpg);
 }
@@ -344,8 +362,8 @@ SERVICES COMPONENTS
 
 .services-container {
   position: relative;
-  padding: 2.5em .5em 1em;
-  text-align: center;
+  // padding: 2.5em .5em 1em;
+  // text-align: center;
   background-color: #fd6632;
 }
 
@@ -386,7 +404,7 @@ SERVICES COMPONENTS
   padding-bottom: .5em;
   font-family: 'ico-fonts';
   font-size: 2em;
-  text-align: center;
+  // text-align: center;
   color: $secondary_accent;
   background-color: #fff;
   border-radius: 50%;
@@ -416,7 +434,7 @@ PRICING COMPONENTS
 */
 
 [class^="pricing"] {
-  text-align: center;
+  // text-align: center;
 }
 
 .pricing-tables {
@@ -459,7 +477,7 @@ li[class^="pricing"] {
 
 .pricing-button {
   width: 90%;
-  margin: 0 auto;
+  // margin: 0 auto;
   padding: .85em 1.35em;
   background-color: #fd6632;
 }
@@ -505,9 +523,9 @@ PORTFOLIO SECTION
   flex-direction: column;
   -webkit-align-items: center;
   align-items: center;
-  max-width: 68em;
-  padding: 3.5em 0 0;
-  margin: 0 auto;
+  // max-width: 68em;
+  // padding: 3.5em 0 0;
+  // margin: 0 auto;
 }
 
 // .portfolio-section-header {
@@ -535,7 +553,7 @@ PORTFOLIO SECTION
     align-items: center;
     -webkit-justify-content: space-around;
     justify-content: space-around;
-    padding-top: 0;
+    // padding-top: 0;
   }
 }
 
@@ -623,7 +641,7 @@ PORTFOLIO SLIDER
   .portfolio-slider-bullets {
     padding: .3em;
     font-size: 1.777em;
-    text-align: center;
+    // text-align: center;
   }
 
   .portfolio-slider-bullets li {
@@ -650,7 +668,7 @@ PORTFOLIO NAVIGATION
   display: block;
   margin-top: .9em;
   margin-bottom: .5em;
-  text-align: center;
+  // text-align: center;
 }
 
 .portfolio-menu-item {
@@ -698,7 +716,7 @@ PORTFOLIO ITEMS
   max-width: 300px;
   margin-top: .5em;
   margin-bottom: 2em;
-  text-align: center;
+  // text-align: center;
 }
 
 .portfolio-opacity {
@@ -720,7 +738,7 @@ PORTFOLIO ITEMS
   content: "\e608";
   font-family: 'ico-fonts';
   font-size: 1.6em;
-  text-align: center;
+  // text-align: center;
   color: #fff;
   background-color: #fd6632;
   border-radius: 50%;
@@ -747,7 +765,7 @@ ABOUT
 .about {
   position: relative;
   background-color: #252629;
-  padding: 4em 1em 1em;
+  // padding: 4em 1em 1em;
 }
 
 // .about-header, .skills-header {
@@ -799,7 +817,7 @@ progress[value]::-webkit-progress-value {
   padding: 0.9em 3.5em;
 }
 
-.about>aside {
+.about > aside {
   margin-bottom: 1em;
 }
 
@@ -858,7 +876,7 @@ TEAM
   position: relative;
   -webkit-justify-content: space-around;
   justify-content: space-around;
-  padding-top: 2.5em;
+  // padding-top: 2.5em;
 }
 
 // .team-section-header {
@@ -1039,8 +1057,8 @@ CONTACT SECTION
   flex-direction: column;
   -webkit-align-items: center;
   align-items: center;
-  margin: 0 auto;
-  padding: 2.5em .3em 2em;
+  // margin: 0 auto;
+  // padding: 2.5em .3em 2em;
   background-color: #fd6632;
 }
 
@@ -1104,7 +1122,7 @@ input[type="submit"]  {
   padding-top: .5em;
   padding-bottom: .5em;
   line-height: 1.4em;
-  text-align: center;
+  // text-align: center;
   background-color: rgba(0,0,0,.7);
 }
 
@@ -1155,7 +1173,7 @@ input[type="submit"]  {
     align-items: center;
     -webkit-justify-content: space-around;
     justify-content: space-around;
-    padding-top: 2em;
+    // padding-top: 2em;
   }
 
   // .contact-section-header {
@@ -1223,14 +1241,14 @@ MEDIA SCREEN MODIFIERS
 */
 
 @media screen and (min-width: 50em) {
-  .services-container,
-  .portfolio-container,
-  .team,
-  .about,
-  .header-content,
-  .contact-section {
-    padding: 0 calc(20% - 7.5em) 6em;
-  }
+  // .services-container,
+  // .portfolio-container,
+  // .team,
+  // .about,
+  // .header-content,
+  // .contact-section {
+  //   padding: 0 calc(20% - 7.5em) 6em;
+  // }
 
   .small-paragraph {
     width: 45%;
