--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -10,3 +10,5 @@ $heading_3: 20;
 $primary_font_family: "Helvetica Neue", Arial, sans-serif;
 $primary_font_color: #ffffff;
 $secondary_font_color: #2e2e2e;
+
+$href_hover: #de592c;
