Rename colors for less specificity

--- a/sass/color/_color.scss
+++ b/sass/color/_color.scss
@@ -1,15 +1,15 @@
-$canvas: #ffffff !default;
-$primary_accent: #fd6632 !default;
-$secondary_accent: #2e2e2e !default;
+$background: #ffffff !default;
+$theme_1_light: #fd6632 !default;
+$theme_2_darkest: #2e2e2e !default;
 
-$firebrick: #7e3319 !default;
-$sunrise: #be4c25 !default;
-$grey: #7c8387 !default;
-$lightgrey: #d4d4d4 !default;
-$slategrey: #b9bdbf !default;
+$theme_1_dark: #7e3319 !default;
+$theme_1: #be4c25 !default;
+$theme_2: #7c8387 !default;
+$theme_2_light: #d4d4d4 !default;
+$theme_2_darker: #b9bdbf !default;
 
-$Facebook: #305fc6;
-$Twitter: #32bdff;
-$Dribbble: #dd2667;
-$LinkedIn: #2ca1eb;
-$Google: #fabc00;
+$facebook_color: #305fc6;
+$twitter_color: #32bdff;
+$dribbble_color: #dd2667;
+$linkedin_color: #2ca1eb;
+$google_plus_color: #fabc00;
