--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ a {
   text-decoration: none; }
 
 body {
-  background-color: #fff;
+  background-color: #ffffff;
   margin: 0 auto;
   text-align: center; }
 
