Refactor Sass flex box code and add main.css to gitignore

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,7 +1,8 @@
 body,
 button,
 input,
-textarea {
+textarea,
+a {
   font-family: $primary_font_family;
   font-size: em($font_size);
   color: $primary_font_color;
