--- a/sass/lib/utils/_icons.scss
+++ b/sass/lib/utils/_icons.scss
@@ -3,11 +3,11 @@ $icons: (
   envelope: '\e602',
   lab: '\e600',
   arrow: '\e610',
-  google: '\e603',
+  google-plus: '\e603',
   facebook: '\e604',
   twitter: '\e605',
-  dribble: '\e606',
-  linkedin: '\e607',
+  dribbble: '\e606',
+  linkedin2: '\e607',
   menu: '\e60f',
   drop: '\e60e',
   plus: '\e608',
