--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,8 @@ html {
 body,
 button,
 input,
-textarea {
+textarea,
+a {
   font-family: "Helvetica Neue", Arial, sans-serif;
   font-size: 1em;
   color: #ffffff; }
@@ -20,7 +21,7 @@ textarea {
 a {
   text-decoration: none; }
 
-.icon-gear:before, .icon-envelope:before, .icon-lab:before, .icon-arrow:before, .icon-google:before, .icon-facebook:before, .icon-twitter:before, .icon-dribble:before, .icon-linkedin:before, .icon-menu:before, .icon-drop:before, .icon-plus:before, .icon-chevron-left:before, .icon-chevron-right:before, .icon-brush:before, .icon-phone:before, .icon-pin:before {
+.icon-gear:before, .icon-envelope:before, .icon-lab:before, .icon-arrow:before, .icon-google-plus:before, .icon-facebook:before, .icon-twitter:before, .icon-dribbble:before, .icon-linkedin2:before, .icon-menu:before, .icon-drop:before, .icon-plus:before, .icon-chevron-left:before, .icon-chevron-right:before, .icon-brush:before, .icon-phone:before, .icon-pin:before {
   font-family: 'ico-fonts';
   font-weight: normal;
   font-style: normal;
@@ -39,7 +40,7 @@ a {
 .icon-arrow:before {
   content: ""; }
 
-.icon-google:before {
+.icon-google-plus:before {
   content: ""; }
 
 .icon-facebook:before {
@@ -48,10 +49,10 @@ a {
 .icon-twitter:before {
   content: ""; }
 
-.icon-dribble:before {
+.icon-dribbble:before {
   content: ""; }
 
-.icon-linkedin:before {
+.icon-linkedin2:before {
   content: ""; }
 
 .icon-menu:before {
@@ -584,7 +585,7 @@ TEAM
   -webkit-justify-content: space-around;
   justify-content: space-around; }
 
-.team-profile, .social-icons {
+.team-profile, .social-icons li {
   display: inline-block; }
 
 .team-profile {
@@ -613,10 +614,12 @@ TEAM
   width: 11em;
   margin: 1em auto 0; }
 
-.social-icons {
-  font-size: 1.3em;
+.social-icons li {
   padding: 0.3em;
   margin: 1em 0.1em; }
+
+.social-icons a {
+  font-size: 1.3em; }
 
 .icon-facebook {
   background-color: #305fc6; }
@@ -672,7 +675,7 @@ TEAM
 @media screen and (min-width: 50em) {
   .team-description-text {
     margin-bottom: 3em; }
-  .social-icons {
+  .social-icons a {
     font-size: 1em; }
   .client-figure {
     display: -webkit-box;
@@ -836,7 +839,7 @@ MEDIA SCREEN MODIFIERS
   .small-paragraph {
     width: 45%; } }
 
-#portfolio, #team, .clients, .client-figure, #contact {
+#portfolio {
   display: -webkit-box;
   display: -moz-box;
   display: box;
@@ -852,9 +855,7 @@ MEDIA SCREEN MODIFIERS
   -ms-align-items: center;
   -o-align-items: center;
   align-items: center;
-  -ms-flex-align: center; }
-
-#portfolio {
+  -ms-flex-align: center;
   -webkit-box-orient: vertical;
   -moz-box-orient: vertical;
   box-orient: vertical;
@@ -876,6 +877,22 @@ MEDIA SCREEN MODIFIERS
   -ms-flex-pack: distribute; }
   @media screen and (min-width: 50em) {
     #portfolio {
+      display: -webkit-box;
+      display: -moz-box;
+      display: box;
+      display: -webkit-flex;
+      display: -moz-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -moz-box-align: center;
+      box-align: center;
+      -webkit-align-items: center;
+      -moz-align-items: center;
+      -ms-align-items: center;
+      -o-align-items: center;
+      align-items: center;
+      -ms-flex-align: center;
       -webkit-box-orient: horizontal;
       -moz-box-orient: horizontal;
       box-orient: horizontal;
@@ -895,6 +912,22 @@ MEDIA SCREEN MODIFIERS
       flex-wrap: wrap; } }
 
 #team {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
+  -ms-flex-align: center;
   -webkit-box-direction: normal;
   -moz-box-direction: normal;
   box-direction: normal;
@@ -907,6 +940,22 @@ MEDIA SCREEN MODIFIERS
   flex-wrap: wrap; }
 
 .clients {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
+  -ms-flex-align: center;
   -webkit-box-direction: normal;
   -moz-box-direction: normal;
   box-direction: normal;
@@ -933,6 +982,22 @@ MEDIA SCREEN MODIFIERS
   margin: 1em 0; }
 
 #contact {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
+  -ms-flex-align: center;
   -webkit-box-orient: vertical;
   -moz-box-orient: vertical;
   box-orient: vertical;
@@ -945,6 +1010,22 @@ MEDIA SCREEN MODIFIERS
   -ms-flex-direction: column; }
   @media screen and (min-width: 50em) {
     #contact {
+      display: -webkit-box;
+      display: -moz-box;
+      display: box;
+      display: -webkit-flex;
+      display: -moz-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+      -moz-box-align: center;
+      box-align: center;
+      -webkit-align-items: center;
+      -moz-align-items: center;
+      -ms-align-items: center;
+      -o-align-items: center;
+      align-items: center;
+      -ms-flex-align: center;
       -webkit-box-orient: horizontal;
       -moz-box-orient: horizontal;
       box-orient: horizontal;
