--- a/sass/main.scss
+++ b/sass/main.scss
@@ -730,7 +730,7 @@ TEAM
 //   padding: 0.7em 0;
 // }
 
-.team-profile, .social-icons {
+.team-profile, .social-icons li {
   display: inline-block;
 }
 
@@ -771,10 +771,13 @@ TEAM
   margin: 1em auto 0;
 }
 
-.social-icons {
-  font-size: 1.3em;
+.social-icons li {
   padding: 0.3em;
   margin: 1em 0.1em;
+}
+
+.social-icons a {
+  font-size: 1.3em;
 }
 
 .icon-facebook {
@@ -856,7 +859,7 @@ TEAM
     margin-bottom: 3em;
   }
 
-  .social-icons {
+  .social-icons a {
     font-size: 1em;
   }
 
@@ -1114,13 +1117,9 @@ MEDIA SCREEN MODIFIERS
   // }
 }
 
-%flex-center {
+@mixin flex($wrap:null, $direction:null, $justify:null) {
   @include display(flex);
   @include align-items(center);
-}
-
-@mixin flex($wrap:null, $direction:null, $justify:null) {
-  @extend %flex-center;
   @include flex-direction($direction);
   @include flex-wrap($wrap);
   @include justify-content($justify);
@@ -1145,7 +1144,7 @@ MEDIA SCREEN MODIFIERS
 
 .client-figure {
   margin: 1em 0;
-  @media screen and (min-width: 50em) {;
+  @media screen and (min-width: 50em) {
     @extend %flex-center;
   }
 }
